ITR-8 Added create, update and delete character actions, added authentication, user input validation, refactored API doc, configured API tests
